--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -12,7 +12,7 @@
 .productos {
     margin-top: 3rem;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
@@ -26,6 +26,7 @@
     color: black;
     padding: 0.5rem;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .boton:hover {
