--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -7,8 +7,14 @@ img{
     width: 3rem;
     
 }
-.remove:hover{
-    background-color: rgba(0, 0, 0, 0.274);
-    color: white;
-    cursor: pointer;
+.remtodo{
+    width: 6.5rem;
+}
+li{
+    list-style-type: none;
+    width: 220px;
+}
+ul{
+    display: flex;
+    gap: 1rem;
 }
