--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,20 +1,55 @@
-img{
+
+.imgProd {
     width: 200px;
+    height: 133px;
 }
 .remove{
-    
     padding: 0.5rem 0.5rem;
     width: 3rem;
-    
 }
+
 .remtodo{
     width: 6.5rem;
 }
-li{
+.carritProd{
+    width: 900px;
     list-style-type: none;
-    width: 220px;
-}
-ul{
     display: flex;
+    gap: 5rem;
+    box-shadow: 0 0 2px black;
+    padding: 1rem;
+}
+.carritoProds{
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
+}
+.infoCarritoProd{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+
+}
+.pesos{
+    color: green;
+}
+.total{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.botonProd{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-self: center;
+}
+.botonProd p{
+    margin:  0.2rem;
+}
+.botonAgregar button{
+    width: 50%;
+}
+.botonAgregar{
+    margin: 0 0 0.5rem 0;
 }
