arreglo de estetica(productos,botones,colores,componentes) agregue footer,contacto,

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -29,3 +29,12 @@
     padding: 3rem;
     margin-top: 2rem;
 }
+.pagos{
+    margin-top: 0.4rem;
+}
+.pagos h4{
+    margin-top: 1rem;
+}
+.metodopago{
+    height: 3.5rem;
+}
