--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -10,13 +10,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px;
 }
 
 .tituloimg img{
-    width: 400px;
-    height: 266px;
+    width: 500px;
+    height: 333px;
 }
 button{
     width: 200px;
     padding: 1rem 0.2rem;
+}
+.mover{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+.wrapper input{
+    outline:  none;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 0 2px black;
+    padding: 0.4rem;
+}
+.wrapper input:focus{
+    box-shadow: 0 0 5px black;
 }
