--- a/src/components/itemCount/itemCount.css
+++ b/src/components/itemCount/itemCount.css
@@ -1,17 +1,17 @@
 .separar{
-    width: 5rem;
-    height:2rem;
     display: flex;
-    align-items: center;
     justify-content: center;
     gap: 1rem;
     margin: 0 auto;
     margin-bottom: 1rem;
-    border: solid 1px black;
+    background-color: rgba(255, 228, 196, 0.514);
+    width: 5rem;
 }
 .separar button{
     padding: 0.5rem 1rem;
     cursor: pointer;
+    border: none;
+    box-shadow: 0 0 1px black;
 }
 .agregar{
     padding: 0.5rem 1.6rem;
